
	* Fix possible problems with other subsystems depending on X11 display
	  being closed (XCloseDisplay not close() on socket fd).

2012-05-02  ChunEon Park (Hermet)

	* Font: actually it doesnt append the font to the hash when font_hash is
	  created inside. Now it is fixed.

2012-05-03  WooHyun Jung

	* Add feature about focus. Focus can be moved in all direction by
	  by elm_widget_focus_go function.

2012-05-04  Leandro Pereira

	* Fix icon not appearing in default Genlist theme.

2012-05-09  Cedric bail

	* Reload theme when it change on disk.

2012-05-11  ShilpaOnkar Singh

	* Added focus key event handling for the colorselector

2012-05-13  Dave Andreoli

	* Fileselector: honor folder_only when using EIO

2012-05-14  Shinwoo Kim

	* menu: remove crash issue when no-parent item is passed to the
	elm_menu_item_separator_add()

2012-05-14  Shinwoo Kim (kimcinoo)

	* popup: Bug Fix: improper usage of textblock

2012-05-15  Dave Andreoli

	* Fileselector: honor folder_only when using EIO

2012-05-16 Carsten Haitzler (The Rasterman)

	* Fix genlist ELM_LIST_LIMIT mode to do what it originally did.
        Documentation was wrong too and code had a slight bug stopping
        genlist from contracting to min size.
        * Optimize the case of COMPRESS + homogeneous mode to avoid
        queue entirely and use existing known item sizes.

2012-05-16  Dave Andreoli

	* Fileselector: Add a wheel spinner that show/spin while EIO is working

2012-05-16  Tom Hacohen (TAsn)

	* Fix fileselector selection done bug and pass the right string.

2012-05-22  Jaehwan Kim

	* Toolbar: Add the more panel feature in toolbar.
        When it is the ELM_TOOLBAR_SHRINK_EXPAND mode and the max item is set,
        the items over max number are located in more panel.
        The APIs are added for this feature.(elm_toolbar_more_item_get, elm_toolbar_items_max_set/get)

2012-05-22 Carsten Haitzler (The Rasterman)

	* Add skeleton for handling remote commands access controls.
